[package]
name = "hme_toolbox"
version = "0.1.0"
edition = "2021"

[dependencies]
bio = "0.38.0"  # Bioinformatics library for parsing FASTA and working with sequences
rayon = "1.8.0"  # For parallel computing
plotters = "0.3"
csv = "1.1"
nalgebra = "0.33"  # or any later compatible version
criterion = "0.3"
fasta = "0.1.3"  # You can specify a different version if needed
